[gd_scene load_steps=8 format=2]

[ext_resource path="res://traps/spikes/Spikes.gd" type="Script" id=1]
[ext_resource path="res://traps/spikes/Health.gd" type="Script" id=2]
[ext_resource path="res://UI/hp_bar/sprites/hp_background.png" type="Texture" id=3]
[ext_resource path="res://UI/hp_bar/sprites/hp_health.png" type="Texture" id=4]
[ext_resource path="res://traps/spikes/spikes.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5, 12.5 )

[node name="spikes" type="StaticBody2D"]
position = Vector2( -0.999996, -0.999998 )
scale = Vector2( -4.36003, 4.35997 )
collision_layer = 512
collision_mask = 512
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="spikes" type="Area2D" parent="."]
scale = Vector2( 1.21752, 1.21752 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikes"]
position = Vector2( -0.5, 2 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3.5 )
shape = SubResource( 2 )
disabled = true

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.427451 )
margin_left = 12.8439
margin_top = -15.5964
margin_right = 52.8439
margin_bottom = 24.4036
rect_scale = Vector2( -0.239088, 0.27467 )
script = ExtResource( 2 )

[node name="TextureProgress" type="TextureProgress" parent="Control"]
margin_top = 2.0
margin_right = 128.0
margin_bottom = 34.0
rect_scale = Vector2( 0.904424, 0.904424 )
max_value = 40.0
value = 40.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0352941, 1, 0.0352941, 1 )

[node name="UpdateTween" type="Tween" parent="Control"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="spikes" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="spikes" to="." method="_on_spikes_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
